--- a/project.properties
+++ b/project.properties
@@ -16,4 +16,4 @@ target=android-17
 android.library.reference.1=../../AndEngine
 android.library.reference.2=../../AndEngineTMXTiledMapExtension
 
-android.library.reference.3=../../facebook-android-sdk-3.0/facebook
+android.library.reference.3=../../Downloads/facebook-android-sdk-3.0/facebook
